# substrate

./: CODEOWNERS
core/basic-authorship/src/: basic_authorship.rs
core/client/: Cargo.toml
core/client/db/src/: lib.rs  utils.rs
core/client/db/src/cache/: list_storage.rs  mod.rs
core/client/src/: client.rs  in_mem.rs
core/consensus/babe/src/: lib.rs
core/consensus/slots/src/: slots.rs
core/finality-grandpa/: Cargo.toml
core/finality-grandpa/primitives/src/: lib.rs
core/finality-grandpa/src/: authorities.rs  communication.rs  environment.rs  finality_proof.rs  gossip.rs  justification.rs  lib.rs  tests.rs
core/finality-grandpa/src/communication/: gossip.rs  mod.rs
core/network/src/: protocol.rs
core/offchain/: Cargo.toml
core/primitives/: Cargo.toml
core/primitives/src/: authority_id.rs  ed25519.rs
core/rpc/: Cargo.toml
core/rpc/src/author/: tests.rs
core/session/: Cargo.toml
core/state-machine/src/: lib.rs
core/state-machine/src/changes_trie/: storage.rs
node-template/runtime/src/: lib.rs  template.rs
node-template/src/: chain_spec.rs
node/cli/: Cargo.toml
node/runtime/src/: lib.rs
srml/executive/src/: lib.rs
srml/grandpa/: Cargo.toml
srml/grandpa/src/: lib.rs
srml/session/: Cargo.toml
srml/session/src/: historical.rs
srml/support/: Cargo.toml
srml/support/src/: traits.rs
