[package]
name = "substrate-session"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
client = { package = "substrate-client", path = "../client", default-features = false }
rstd = { package = "sr-std", path = "../sr-std", default-features = false }
sr-primitives = { path = "../sr-primitives", default-features = false }
sr-staking-primitives = { path = "../sr-staking-primitives", default-features = false }
primitives = { package = "substrate-primitives", path = "../primitives", optional = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"client/std",
	"rstd/std",
	"sr-primitives/std",
	"sr-staking-primitives/std",
	"primitives",
]
